heading change in footer

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,23 @@
-
-.bodyrr{
+.bodyrr {
   height: 100vh;
+  overflow: hidden;
 
 }
-.Main_div{
+
+.Main_div {
   height: 100vh;
   width: 100%;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
   /* display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center; */
-  background-color: aqua;
+  /* background-color: aqua; */
 }
 
-.header{
+.header {
   background-color: brown;
   height: 10vh;
   width: 100%;
@@ -21,40 +25,46 @@
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
-  
+
 }
 
-.footer{
+.footer {
   display: flex;
   align-items: center;
-  justify-content:space-around; 
-  background-color:blueviolet;
+  justify-content: space-around;
+  background-color: blueviolet;
   height: 10vh;
 }
-.icon{
+
+.icon {
+  height: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
 
 }
 
-.body{
+.title {}
+
+.body {
   /* background-color:rgb(42, 89, 165); */
   height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-inline: 30px;
 }
 
 
-.flex{
+.flex {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: center;
-  margin: 20px;
+  margin: 10px;
 
 }
 
@@ -62,36 +72,67 @@
   height: 200px;
   width: 200px;
 } */
-img{
-  height: 200px;
+
+.card {
+  height: 250px;
+  width: 250px;
+  border: 1px solid;
+  padding: 2px;
+  margin-inline: 10px;
+  margin-block: 5px;
+}
+
+img {
+  /* z-index: -1; */
+  height: 150px;
   width: 200px;
 }
-.card_details{
+
+.card_details {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.Trending{
-  background-color:rgb(243, 237, 237);
-  height: 100%;
-width: 100%;
+
+.card_title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.Trending_body{
+.Trending {
+  /* background-color: rgb(243, 237, 237); */
+  height: 100%;
+  width: 100%;
+  overflow:scroll;
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+  scroll-behavior: smooth;
+
+
+  /* overflow: hidden; */
+
+}
+
+.Trending_heading {
+  height: 10%;
+  width: 100%;
+}
+
+.Trending_body {
+  height: 90%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
 
-.div{
+/* .div{
   /* display: flex; */
-  /* align-items: center;
+/* align-items: center;
   flex-direction: col; */
-  /* justify-content: center; */
-  margin: 20px;
+/* justify-content: center; */
 
-}
 /* .app{
   display: flex;
   justify-content: center;
@@ -111,10 +152,3 @@ width: 100%;
 
 
  */
-
- .card{
-  height:300px;
-  width:300px;
-  border: 2px solid;
-  padding: 20px;
-}
