--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .bodyrr {
   height: 100vh;
   overflow: hidden;
-
 }
 
 .Main_div {
@@ -25,9 +24,21 @@
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
+  /* margin: 2px; */
+  /* position: ; */
 
 }
+/* .sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+} */
 
+.bottomsticky{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
 .footer {
   display: flex;
   align-items: center;
@@ -56,6 +67,7 @@
   align-items: center;
   flex-direction: column;
   margin-inline: 30px;
+  /* margin-top: 20px; */
 }
 
 
@@ -116,6 +128,7 @@ img {
 .Trending_heading {
   height: 10%;
   width: 100%;
+  color: black;
 }
 
 .Trending_body {
@@ -154,10 +167,10 @@ img {
  */
  .pagination {
 /* bottom: 0; */
-  /* display: inline-block; */
+  display: inline-block;
 }
 
-.pagination a {
+/* .pagination a {
   color: black;
   float: left;
   padding: 8px 16px;
@@ -173,4 +186,8 @@ img {
 .pagination a:hover:not(.active) {
   background-color: #ddd;
   border-radius: 5px;
+} */
+
+.pagination__disable{
+  opacity: 0;
 }
