--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,7 @@ img {
   height: 90%;
   width: 100%;
   display: flex;
-  flex-direction: row;
+  /* flex-direction: column; */
   flex-wrap: wrap;
   justify-content: center;
 }
