--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.bodyrr {
-  height: 100vh;
-  overflow: hidden;
-}
 
 .Main_div {
   height: 100vh;
@@ -9,6 +5,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  position: relative;
+  overflow: hidden;
   /* display: flex;
   align-items: center;
   flex-direction: column;
@@ -21,7 +19,7 @@
   height: 10vh;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
   /* margin: 2px; */
@@ -45,10 +43,11 @@
   justify-content: space-around;
   background-color: blueviolet;
   height: 10vh;
+  width: 100%;
 }
 
 .icon {
-  height: 80%;
+  height: 20%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -56,18 +55,16 @@
   justify-content: center;
 
 }
-
-.title {}
-
 .body {
-  /* background-color:rgb(42, 89, 165); */
   height: 80vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   margin-inline: 30px;
-  /* margin-top: 20px; */
+  position: absolute;
+  margin-top: 20px;
 }
 
 
@@ -76,7 +73,7 @@
   align-items: center;
   flex-direction: row;
   justify-content: center;
-  margin: 10px;
+  /* margin: 10px; */
 
 }
 
@@ -117,13 +114,14 @@ img {
 }
 
 .Trending {
+  
   /* background-color: rgb(243, 237, 237); */
   height: 100%;
   width: 100%;
   overflow:scroll;
   overflow-x: hidden; /* Hide horizontal scrollbar */
   scroll-behavior: smooth;
-
+flex-direction: column;
 
   /* overflow: hidden; */
 
@@ -133,19 +131,22 @@ img {
   height: 10%;
   width: 100%;
   color: black;
+margin-bottom: 10px;
 }
 .bodypagin{
   height: 90%;
   width: 100%;
   display: flex;
-  /* flex-direction: column; */
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  margin: 2px;
+  /* flex-wrap: wrap; */
+  /* justify-content: center; */
 }
 .Trending_body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 
@@ -181,6 +182,7 @@ img {
   margin: 15px 0;
   display: flex;
   justify-content: center;
+  margin-bottom: 2px;
   /* align-items: center; */
 }
 .pagination > span{
