--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-body {
+ *{
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   color: black;
-  height: 100vh;
-  width: 100%;
+  /* height: 100vh;
+  width: 100%; */
   box-sizing: border-box;
-}
+} 
 
 
